# encode-decode-video

./: .gitignore  README.md  local.properties  settings.gradle.kts  setup_opus.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
app/src/main/java/com/example/demoplayvideo/: AdaptiveBitrateManager.kt  DemoSource.kt  EncoderPresets.kt  LiveStreamManager.kt  LivestreamActivity.kt  MainActivity.kt  MediaSourceModule.kt  SimpleStreamExample.kt  VideoDecoder.kt  VideoEncoder.kt
app/src/main/java/com/example/demoplayvideo/config/: ConfigSender.kt  DecoderConfigExtractor.kt  MediaFormatConverter.kt
app/src/main/java/com/example/demoplayvideo/decoder/: MainActivity.kt  MediaSourceModule.kt  OpusAudioPlayer.kt  OpusDecoder.kt  VideoDecoder.kt
app/src/main/res/layout/: activity_livestream.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
build-opus/android-libs/arm64-v8a/lib/: libopus.la
build-opus/android-libs/arm64-v8a/lib/pkgconfig/: opus.pc
build-opus/android-libs/armeabi-v7a/lib/: libopus.la
build-opus/android-libs/armeabi-v7a/lib/pkgconfig/: opus.pc
build-opus/android-libs/x86/lib/: libopus.la
build-opus/android-libs/x86/lib/pkgconfig/: opus.pc
build-opus/android-libs/x86_64/lib/: libopus.la
build-opus/android-libs/x86_64/lib/pkgconfig/: opus.pc
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
